fixed card-product spacing between eachother and added spacing between elements

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,11 @@
 // Specific CSS for your home-page
 
 #map {
-  height: 600px;
+  height: 628px;
   width: 500px;
   top: 0;
   position: absolute;
-  top: 885px;
+  top: 890px;
   left: 911px;
   object-fit: cover;
 }
